static/css/style.css
/* ... */
.surrender__alert {
    text-align: justify;
    font-weight: 100;
    color: red;
    margin-top: 35px;
}

.surrender__alert a {
    border-bottom: 1px solid #ff7575;
    font-weight: 100;
    color: red;
}

.btn--surrender {
    width: 80%;
    margin-bottom: 15px;
}

.btn--rehome {
    margin-top: 35px;
}

/* contact.html */

.textarea--contact-subject {
    height: 100px;
    margin-bottom: 15px;
}

.btn--contact {
    margin-top: 35px;
}

.container--contact {
    padding-top: 35px;
}

/* alert.html */

.alert-info {
    font-size: 1.3rem;
    text-align: justify;
    margin-bottom: 35px;
    padding: 0 10px;
}

.alert-center {
    text-align: center;
}


/* post_main.html & dog_main.html*/

.filter-toggle {
    text-align: right;
    margin: 35px auto 35px auto;
    font-weight: 100;
}

.filter-caption {
    text-align: center;
    margin-bottom: 15px;
    font-weight: 100;
}

.form-toggle {
    display: none;
}

.wrapper--filter {
    display: flex;
    flex-direction: column;
}

.btn--filter-reset {
    margin: 20px auto 15px auto;
}

.btn--filter {
    margin-bottom: 35px;
}

.card__info {
    display: flex;
    justify-content: space-between;
    font-size: 0.9rem;
    font-weight: 100;
    margin-bottom: 10px;
    padding: 0 10px;
}

/* dog_new.html & post_new.html
  dog_edit.html & post_edit.html*/

.container--post,
.container--dog {
    padding-top: 35px;
}

.textarea--post-summary,
.textarea--dog-greeting {
    height: 150px;
    margin-bottom: 15px;
}

.btn--post,
.btn--dog {
    margin-top: 35px;
}

/* dog_page.html & post_page.html */

.post__img,
.dog__img {
    background-size: cover;
    background-position: center;
}

.post__title,
.dog__name {
    font-size: 1.5rem;
    font-weight: 900;
    margin: 30px 0 15px 0;
}

.post__summary,
.dog__greeting {
    margin-bottom: 15px;
    text-align: justify;
    font-size: 1.2rem;
    font-weight: 100;
    font-style: italic;
}

.post__info,
.dog__info {
    margin: 35px 0;
    padding: 0 10px;
    font-weight: 100;
}

.post__info span,
.dog__info span  {
    font-weight: 900;
}

.hr--post,
.hr--dog {
    margin-bottom: 35px;
}

.control-buttons {
    display: flex;
    justify-content: flex-end;
    font-size: 1.5rem;
    margin: 0 15px 0 0;
}

.popup-main-btn {
    margin-left: 10px;
}

.post__content,
.dog__description {
    font-size: 1.1rem;
    margin-top: 35px;
    padding: 0 10px;
    font-weight: 100;
    text-align: justify;
    white-space: pre-line;
}

.post__likes {
    font-size: 0.8rem;
    text-align: right;
    margin-right: 10px;
}

.star-button {
    width: 100%;
    text-align: center;
}

/* inbox.html */

.inbox {
    display: flex;
    flex-direction: column;
    background-color: var(--color3);
    color: var(--color6);
    padding: 10px 5px;
    margin: 0 4px 4px 4px;
    border-radius: 5px;
    overflow: hidden;
}

.inbox__subject {
    color: var(--color6);
    font-weight: 900;
}

.inbox__subject--read {
    font-weight: 100;
}

.inbox__details {
    display: flex;
    justify-content: space-between;
    font-weight: 100;
    font-size: 0.9rem;
    padding: 5px 0;
}

.inbox-title {
    color: var(--color1);
    font-size: 1.1rem;
    font-weight: 900;
    text-align: left;
    white-space: pre-line;
    margin: 35px 0;
    padding: 0 10px;
}

.inbox--requests {
    display: none;
}

#title-requests {
    display: none;
}

.switch {
    border: 1px solid var(--color3);
    border-radius: 5px;
    overflow: hidden;
    width: fit-content;
    margin: 35px auto 0 auto;
}

.switch__messages,
.switch__requests {
    display: inline-block;
    font-size: 1.2rem;
    padding: 10px;
    width: 125px;
    text-align: center;
    margin: -5px;
}

.switch-dark {
    background-color: var(--color3);
    color: var(--color6);
}

.switch-light {
    background-color: var(--color6);
    color: var(--color2);
}

/* message.html */

.message__subject {
    font-size: 1.1rem;
    font-weight: 900;
    margin: 35px 0;
    padding: 0 10px;
}

.message__details {
    font-weight: 100;
    margin-bottom: 35px;
    padding: 0 10px;
}

.message__details span {
    font-weight: 900;
}

.message__nonuser {
    text-align: justify;
    padding: 0 10px;
}

.message__content {
    padding: 0 10px;
    font-size: 1.1rem;
    font-weight: 100;
    text-align: justify;
    white-space: pre-line;
}

.message__content--adopt {
    padding: 0;
}

.message__replied {
    color: var(--color2);
    font-size: 1rem;
    font-weight: 100;
}

.textarea--reply {
    margin-top: 35px;
}


.message__btns div {
    font-size: 0.9rem;
    font-weight: 400;
    text-align: center;
    border: 1px solid var(--color2);
    border-radius: 5px;
    background-color: var(--color6);
    color: var(--color3);
    width: 90px;
    padding: 10px;
    margin: 35px 10px;
}

.message__btns i {
    margin-right: 5px;
}

.btn--reply {
    margin: 35px auto 15px auto;
}

.dog-unavailable {
    color: red;
    margin: 15px 0;
}

/* Navbar and Footer */

.nav {
    position: fixed;
    width: 100%;
    background-color: var(--color2);
    height: 80px;
    z-index: 1;
    transition: 0.5s;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 10px;
    height: 100%;
    border-bottom: 1px solid var(--color6);
}

.navbar__logo {
    color: var(--color6);
    font-size: 2rem;
}

.navbar__toggle {
    color: var(--color6);
    font-size: 2rem;
}

.nav__mobile {
    display: none;
    height: 100vh;
    padding: 10px 25px;
    background-color: var(--color2);
    z-index: 1;
}

.nav__mobile li {
    margin: 20px 0;
    padding: 5px 15px;
    font-size: 1.5rem;
    color: var(--color6);
    box-shadow: inset 4px 0px 0px -2px #ffffff61;
}

.footer {
    text-align: center;
    background-color:var(--color2);
    color: var(--color6);
    padding: 25px 0;
}

.footer__title {
    font-size: 1.5rem;
}

.footer__links {
    display: flex;
    justify-content: center;
}
/* ... */

